--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.16.1",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.63.6",
     "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4"
